Fix home YouTube text overflow on small screens

--- a/src/styles/parts/home.scss
+++ b/src/styles/parts/home.scss
@@ -108,43 +108,50 @@
 		flex: 1;
 		text-decoration: none;
 		font-weight: $font-weight-bold;
-		margin-bottom: 1rem;
-		font-size: 1.25rem;
+		font-size: 1.15rem;
 		overflow: hidden;
+		
+		margin-right: 1rem;
+		margin-bottom: 2rem;
+
+		@media screen and (min-width: $breakpoint-phone) {
+			margin-bottom: 0;
+		}
 
 		&:last-child {
 			margin-right: 0;
 		}
 
 		&__thumb {
-			width: 50%;
-			float: left;
 			display: block;
 			border-radius: $radius-small;
+			width: 100%;
+			float: none;
+			margin-bottom: 0.5rem;
 		}
 
 		&__name {
-			display: block;
-			width: 50%;
-			float: right;
-			padding-left: 1rem;
+			display: inline;
+			width: auto;
+			float: none;
+			padding: 0;
 		}
 
-		@media screen and (min-width: $breakpoint-tablet) {
-			margin-right: 1rem;
-			margin-bottom: 0;
+		@media screen and (min-width: $breakpoint-phone) and (max-width: $breakpoint-tablet) {
+			margin-bottom: 1rem;
+			margin-right: 0;
 
 			&__thumb {
-				width: 100%;
-				float: none;
-				margin-bottom: 0.5rem;
+				width: 50%;
+				float: left;
+				margin-bottom: 0;
 			}
 
 			&__name {
-				display: inline;
-				width: auto;
-				float: none;
-				padding: 0;
+				display: block;
+				width: 50%;
+				float: right;
+				padding-left: 1rem;
 			}
 		}
 
